// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<LI /> > should render 1`] = `
<li
  data-astro-cid-7jajnglq=""
  data-astro-source-file="/home/lapanti/code/laurilavanti/src/components/LI.astro"
  data-astro-source-loc="40:69"
  style=";--bodyFontSize: 1.125rem;--bodyFontWeight: 400;--bodyLineHeight: 1.75rem;--colorsEvening: rgb(0, 98, 114);--sizes05: 0.5rem;--sizes125: 1.25rem;"
>
   List item 
</li>
`;

exports[`<LI /> > should render heavy 1`] = `
<li
  data-astro-cid-7jajnglq=""
  data-astro-source-file="/home/lapanti/code/laurilavanti/src/components/LI.astro"
  data-astro-source-loc="40:69"
  style="font-weight:1000;--bodyFontSize: 1.125rem;--bodyFontWeight: 400;--bodyLineHeight: 1.75rem;--colorsEvening: rgb(0, 98, 114);--sizes05: 0.5rem;--sizes125: 1.25rem;"
>
   List item 
</li>
`;
